Avoid debug bar overlapping export button

--- a/src/web/assets/cp/src/css/_cp.scss
+++ b/src/web/assets/cp/src/css/_cp.scss
@@ -976,6 +976,7 @@ li.breadcrumb-toggle-wrapper {
         &:focus {
           z-index: 1;
         }
+
         &:not(.sel) {
           &:hover {
             background-color: var(--gray-200);
@@ -1058,6 +1059,14 @@ li.breadcrumb-toggle-wrapper {
     }
   }
 
+  .has-debug-toolbar & {
+    transition: padding linear 100ms;
+
+    &.stuck {
+      padding-bottom: 52px;
+    }
+  }
+
   & > *,
   .flex > * {
     margin-bottom: 0;
@@ -1103,6 +1112,7 @@ li.breadcrumb-toggle-wrapper {
           & > .status-badge {
             border-top-left-radius: var(--large-border-radius);
           }
+
           border-top-right-radius: var(--large-border-radius);
         }
 
@@ -1111,6 +1121,7 @@ li.breadcrumb-toggle-wrapper {
           & > .status-badge {
             border-bottom-left-radius: var(--large-border-radius);
           }
+
           border-bottom-right-radius: var(--large-border-radius);
         }
       }
@@ -1357,12 +1368,16 @@ li.breadcrumb-toggle-wrapper {
       & > li:not(.heading),
       & > li.heading > ul > li {
         @include nav-level(0);
+
         & > ul.nested > li {
           @include nav-level(1);
+
           & > ul.nested > li {
             @include nav-level(2);
+
             & > ul.nested > li {
               @include nav-level(3);
+
               & > ul.nested > li {
                 @include nav-level(4);
               }
